# corewar

./: CMakeLists.txt  flag_d.c  functions.c  functions2.c  functions3.c  functions4.c  main.c  main2.c  main3.c  main_functions.c  main_functions2.c  op.c  op_add_sub_zjmp_ldi_sti.c  op_addr_ld_st.c  op_and_or_xor.c  op_fork_lld_lldi.c  op_lfork_aff_live.c  read_champ.c  validation.c  validation2.c  visio.c  visio_cells.c  visio_put_attrs.c  visio_put_data.c  visio_update_attrs.c  visio_update_data.c
includes/: corewar.h  lemin.h  op.h
libft/: Makefile
